--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,9 @@ python = "^3.12"
 flake8 = "^7.0.0"
 black = "^24.1.1"
 mypy = "^1.8.0"
-
+pytest = "^8.0.0"
+autoflake = "^2.2.1"
+isort = "^5.13.2"
 
 [build-system]
 requires = ["poetry-core"]
